--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -1,13 +1,12 @@
-{% extends "base.html" %}
-{% block title %}Forgot Password - Todo App{% endblock %}
-{% block content %}
+{% extends "base.html" %} {% block title %}Forgot Password - Todo App{% endblock %} {% block content
+%}
 <div class="row justify-content-center">
   <div class="col-md-5">
     <div class="card shadow-sm">
       <div class="card-body">
         <h1 class="h5 mb-3">Forgot Password</h1>
         <form method="post" novalidate>
-          <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+          <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
           <div class="mb-3">
             <label class="form-label">Registered Email</label>
             <input type="email" class="form-control" name="email" required />
