--- a/templates/login.html
+++ b/templates/login.html
@@ -1,20 +1,24 @@
-{% extends "base.html" %}
-{% block title %}Login - Todo App{% endblock %}
-{% block content %}
+{% extends "base.html" %} {% block title %}Login - Todo App{% endblock %} {% block content %}
 <div class="row justify-content-center">
   <div class="col-md-5">
     <div class="card shadow-sm">
       <div class="card-body">
         <h1 class="h4 mb-3">Login</h1>
         <form method="post" novalidate>
-          <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+          <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
           <div class="mb-3">
             <label class="form-label">Email</label>
-            <input type="email" class="form-control" name="email" value="{{ email or '' }}" required>
+            <input
+              type="email"
+              class="form-control"
+              name="email"
+              value="{{ email or '' }}"
+              required
+            />
           </div>
           <div class="mb-3">
             <label class="form-label">Password</label>
-            <input type="password" class="form-control" name="password" required minlength="8">
+            <input type="password" class="form-control" name="password" required minlength="8" />
           </div>
           <div class="d-grid gap-2">
             <button class="btn btn-primary" type="submit">Sign in</button>
@@ -23,7 +27,7 @@
         <div class="mt-3 d-flex justify-content-between">
           <a href="{{ url_for('register') }}">Create an account</a>
           <!-- forgot/reset will be added later -->
-            <a href="{{ url_for('forgot_password') }}">Forgot password?</a>
+          <a href="{{ url_for('forgot_password') }}">Forgot password?</a>
         </div>
       </div>
     </div>
