--- a/templates/register.html
+++ b/templates/register.html
@@ -1,29 +1,46 @@
-{% extends "base.html" %}
-{% block title %}Register - Todo App{% endblock %}
-{% block content %}
+{% extends "base.html" %} {% block title %}Register - Todo App{% endblock %} {% block content %}
 <div class="row justify-content-center">
   <div class="col-md-6">
     <div class="card shadow-sm">
       <div class="card-body">
         <h1 class="h4 mb-3">Create Account</h1>
         <form method="post" novalidate>
-          <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+          <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
           <div class="mb-3">
             <label class="form-label">Full Name</label>
-            <input type="text" class="form-control" name="name" value="{{ name or '' }}" required minlength="2">
+            <input
+              type="text"
+              class="form-control"
+              name="name"
+              value="{{ name or '' }}"
+              required
+              minlength="2"
+            />
           </div>
           <div class="mb-3">
             <label class="form-label">Email</label>
-            <input type="email" class="form-control" name="email" value="{{ email or '' }}" required>
+            <input
+              type="email"
+              class="form-control"
+              name="email"
+              value="{{ email or '' }}"
+              required
+            />
           </div>
           <div class="row">
             <div class="col-md-6 mb-3">
               <label class="form-label">Password</label>
-              <input type="password" class="form-control" name="password" required minlength="8">
+              <input type="password" class="form-control" name="password" required minlength="8" />
             </div>
             <div class="col-md-6 mb-3">
               <label class="form-label">Confirm Password</label>
-              <input type="password" class="form-control" name="confirm_password" required minlength="8">
+              <input
+                type="password"
+                class="form-control"
+                name="confirm_password"
+                required
+                minlength="8"
+              />
             </div>
           </div>
           <div class="d-grid gap-2">
