--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="icon" href="{{ url_for('static', filename='tick_todo.jpg') }}" />
+    <link rel="icon" href="{{ url_for('static', filename='tick todo.jpg') }}" />
 
     <style>
       :root {
@@ -63,7 +63,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body border-bottom sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="{{ url_for('dashboard') }}">Todo</a>
+        <a class="navbar-brand" href="{{ url_for('dashboard') }}">CertifyMe Todo</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topnav">
           <span class="navbar-toggler-icon"></span>
         </button>
