--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -1,7 +1,4 @@
-{% extends "base.html" %}
-{% block title %}Forgot Password · Todo{% endblock %}
-
-{% block content %}
+{% extends "base.html" %} {% block title %}Forgot Password · Todo{% endblock %} {% block content %}
 <div class="row justify-content-center">
   <div class="col-12 col-md-6 col-lg-5">
     <div class="card">
@@ -10,7 +7,14 @@
         <form method="post" novalidate>
           <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
           <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="fp-email" name="email" placeholder="you@example.com" required />
+            <input
+              type="email"
+              class="form-control"
+              id="fp-email"
+              name="email"
+              placeholder="you@example.com"
+              required
+            />
             <label for="fp-email">Registered email</label>
           </div>
           <div class="d-grid">
