--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,4 @@
-{% extends "base.html" %}
-{% block title %}Login · Todo{% endblock %}
-
-{% block content %}
+{% extends "base.html" %} {% block title %}Login · Todo{% endblock %} {% block content %}
 <div class="row justify-content-center">
   <div class="col-12 col-md-7 col-lg-5">
     <div class="card">
@@ -12,12 +9,28 @@
           <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
 
           <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="email" name="email" value="{{ email or '' }}" placeholder="you@example.com" required />
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              name="email"
+              value="{{ email or '' }}"
+              placeholder="you@example.com"
+              required
+            />
             <label for="email">Email</label>
           </div>
 
           <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="password" name="password" placeholder="••••••••" minlength="8" required />
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              name="password"
+              placeholder="••••••••"
+              minlength="8"
+              required
+            />
             <label for="password">Password</label>
           </div>
 
