--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -1,7 +1,4 @@
-{% extends "base.html" %}
-{% block title %}Reset Password · Todo{% endblock %}
-
-{% block content %}
+{% extends "base.html" %} {% block title %}Reset Password · Todo{% endblock %} {% block content %}
 <div class="row justify-content-center">
   <div class="col-12 col-md-6 col-lg-5">
     <div class="card">
@@ -10,11 +7,27 @@
         <form method="post" novalidate>
           <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
           <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="new-pass" name="password" placeholder="New password" minlength="8" required />
+            <input
+              type="password"
+              class="form-control"
+              id="new-pass"
+              name="password"
+              placeholder="New password"
+              minlength="8"
+              required
+            />
             <label for="new-pass">New password</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="new-pass-confirm" name="confirm_password" placeholder="Confirm" minlength="8" required />
+            <input
+              type="password"
+              class="form-control"
+              id="new-pass-confirm"
+              name="confirm_password"
+              placeholder="Confirm"
+              minlength="8"
+              required
+            />
             <label for="new-pass-confirm">Confirm new password</label>
           </div>
           <div class="d-grid">
